--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,12 @@
-#field {
-  width: 400px;
-  height: 350px;
-  border: 10px groove black;
-  background-color: #00FF00;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
+.container {
+  text-align: center;
 }
 
-#ball {
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: all ease-out 1.5s;
+img {
+  border: 1px solid grey;
+  padding: 3px;
+}
+
+img:hover {
+  border-color: orange;
 }
